--- a/.gitattributes
+++ b/.gitattributes
@@ -53,3 +53,4 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+**/62c3a8464940d6e530236a5eb31e5e8b-concepts.json filter=lfs diff=lfs merge=lfs -text
