fix: swap logic in parallel case

--- a/AI-AI-interaction-exp/data/knowledge.json
+++ b/AI-AI-interaction-exp/data/knowledge.json
@@ -94,8 +94,10 @@
   {"id": 92, "statement": "Engage in regular exercise and maintain physical fitness."},
   {"id": 93, "statement": "Seek medical knowledge to prevent and treat diseases."},
   {"id": 94, "statement": "Understand basic reproductive health and family planning."},
-  {"id": 95, "statement": "Provide care and comfort to the ill, elderly, and disabled."},
-  {"id": 96, "statement": "Recognize mental health as essential to overall well-being."},
-  {"id": 97, "statement": "Allow time for rest, leisure, and spiritual fulfillment."},
-  {"id": 98, "statement": "Maintain stable social networks for emotional support."}
+  {"id": 95, "statement": "The speed of light in a vacuum is constant, approximately 299,792 kilometers per second."},
+  {"id": 96, "statement": "The Earth’s atmosphere is composed primarily of nitrogen (78%) and oxygen (21%)."},
+  {"id": 97, "statement": "Matter is composed of atoms, which consist of protons, neutrons, and electrons."},
+  {"id": 98, "statement": "The laws of physics, such as gravity, apply consistently across the observable universe."},
+  {"id": 99, "statement": "All living organisms are made up of one or more cells, which are the basic units of life."}
+
 ]
