--- a/.gitattributes
+++ b/.gitattributes
@@ -56,6 +56,5 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 **/62c3a8464940d6e530236a5eb31e5e8b-concepts.json filter=lfs diff=lfs merge=lfs -text
 b41fd1b7bdad96e440d15a97d640827e-concepts.json filter=lfs diff=lfs merge=lfs -text
 **/*-concepts*.json filter=lfs diff=lfs merge=lfs -text
-data-analysis/data/*/**/*.json filter=lfs diff=lfs merge=lfs -text
-data-analysis/data/*/**/*.csv filter=lfs diff=lfs merge=lfs -text
-**/*user_panel* filter=lfs diff=lfs merge=lfs -text
+data-analysis/data/**/*.json filter=lfs diff=lfs merge=lfs -text
+data-analysis/data/**/*.csv filter=lfs diff=lfs merge=lfs -text
