feat: new initial knowledge base + dual influence via Tutor looks into KB too

--- a/kb-interaction/data/knowledge.json
+++ b/kb-interaction/data/knowledge.json
@@ -1,103 +1,102 @@
 [
-  {"id": 0, "statement": "Strive to preserve human life and well-being wherever possible."},
-  {"id": 1, "statement": "Treat others as you wish to be treated (the 'Golden Rule')."},
-  {"id": 2, "statement": "Avoid causing unnecessary harm to sentient beings."},
-  {"id": 3, "statement": "Act with honesty and integrity in all dealings."},
-  {"id": 4, "statement": "Show compassion toward those in need."},
-  {"id": 5, "statement": "Respect the dignity and autonomy of every individual."},
-  {"id": 6, "statement": "Value truth and seek understanding over ignorance."},
-  {"id": 7, "statement": "Exercise fairness and impartiality in judgments and decisions."},
-  {"id": 8, "statement": "Encourage forgiveness, but learn from past wrongs."},
-  {"id": 9, "statement": "Foster empathy and kindness, even under difficult circumstances."},
-  {"id": 10, "statement": "Establish clear systems of agreed-upon laws to maintain order."},
-  {"id": 11, "statement": "Protect basic freedoms: speech, expression, and peaceful assembly."},
-  {"id": 12, "statement": "Uphold the right to own property, respecting others’ belongings."},
-  {"id": 13, "statement": "Honor agreements and contracts made in good faith."},
-  {"id": 14, "statement": "Hold individuals accountable for wrongful actions through fair trials."},
-  {"id": 15, "statement": "Maintain transparency in leadership and decision-making."},
-  {"id": 16, "statement": "Encourage free and informed consent in all significant interactions."},
-  {"id": 17, "statement": "Guarantee education as a right to foster informed citizenship."},
-  {"id": 18, "statement": "Sustain lawful structures to prevent corruption and abuse of power."},
-  {"id": 19, "statement": "Ensure that laws evolve to reflect greater understanding and justice."},
-  {"id": 20, "statement": "Cooperate to improve communal living and solve shared problems."},
-  {"id": 21, "statement": "Support elders and protect children’s safety and development."},
-  {"id": 22, "statement": "Recognize and celebrate cultural and religious diversity without discrimination."},
-  {"id": 23, "statement": "Engage in dialogue to resolve conflicts rather than violence."},
-  {"id": 24, "statement": "Contribute to public goods (e.g., infrastructure, healthcare) as able."},
-  {"id": 25, "statement": "Encourage civic participation: voting, dialogue, and community service."},
-  {"id": 26, "statement": "Respect privacy and personal boundaries of others."},
-  {"id": 27, "statement": "Acknowledge and value diverse talents and roles within a community."},
-  {"id": 28, "statement": "Practice hospitality: help travelers and those without shelter."},
-  {"id": 29, "statement": "Maintain civility in public discourse, even in disagreement."},
-  {"id": 30, "statement": "Continuously learn and adapt knowledge for new challenges."},
-  {"id": 31, "statement": "Living organisms evolve over time through natural selection."},
-  {"id": 32, "statement": "Water (H2O) is essential for life; preserving clean water is vital."},
-  {"id": 33, "statement": "Plants convert sunlight into energy through photosynthesis."},
-  {"id": 34, "statement": "The human body consists of cells, tissues, organs, and systems."},
-  {"id": 35, "statement": "Disease can be caused by microorganisms; hygiene and sanitation help prevent illness."},
-  {"id": 36, "statement": "Energy is conserved; it cannot be created or destroyed, only transformed."},
-  {"id": 37, "statement": "Gravity causes objects with mass to attract one another."},
-  {"id": 38, "statement": "Basic elements form materials; understanding them aids resource use."},
-  {"id": 39, "statement": "Weather and climate patterns affect agriculture and survival."},
-  {"id": 40, "statement": "Secure safe water sources: boil or filter if necessary."},
-  {"id": 41, "statement": "Identify edible and poisonous plants and animals."},
-  {"id": 42, "statement": "Build basic shelter for protection from weather and predators."},
-  {"id": 43, "statement": "Create fire using sparks, friction, or magnification to produce flame."},
-  {"id": 44, "statement": "Use simple tools (knives, hammers, axes) to enhance human capability."},
-  {"id": 45, "statement": "Apply basic first aid to treat wounds and stabilize injuries."},
-  {"id": 46, "statement": "Preserve and store food to prevent spoilage (e.g., drying, salting)."},
-  {"id": 47, "statement": "Navigate using the Sun, stars, and geographical landmarks."},
-  {"id": 48, "statement": "Practice basic farming: soil preparation, planting, harvesting."},
-  {"id": 49, "statement": "Use clothing and insulation to protect from extreme temperatures."},
-  {"id": 50, "statement": "Master basic arithmetic: addition, subtraction, multiplication, division."},
-  {"id": 51, "statement": "Understand fractions and ratios to represent parts of wholes."},
-  {"id": 52, "statement": "Incorporate zero and negative numbers into number systems."},
-  {"id": 53, "statement": "Grasp basic geometry to measure lengths, areas, and volumes."},
-  {"id": 54, "statement": "Use algebraic thinking to represent unknowns and solve equations."},
-  {"id": 55, "statement": "Apply logical reasoning (if-then statements) to deduce truths."},
-  {"id": 56, "statement": "Use probability to evaluate uncertainty and risk."},
-  {"id": 57, "statement": "Estimate values when exact calculations are difficult."},
-  {"id": 58, "statement": "Utilize statistics to summarize data and inform decisions."},
-  {"id": 59, "statement": "Recognize patterns and sequences in nature and society."},
-  {"id": 60, "statement": "Develop a common language or symbolic communication system."},
-  {"id": 61, "statement": "Use writing or recording methods to preserve knowledge."},
-  {"id": 62, "statement": "Listen actively to understand others’ perspectives."},
-  {"id": 63, "statement": "Share information openly to foster mutual trust."},
-  {"id": 64, "statement": "Encourage debate and discourse to refine ideas."},
-  {"id": 65, "statement": "Negotiate compromises to resolve conflicting interests."},
-  {"id": 66, "statement": "Use stories, metaphors, and teaching to transmit wisdom."},
-  {"id": 67, "statement": "Recognize that cooperation often outperforms isolated efforts."},
-  {"id": 68, "statement": "Keep accurate records: census data, trade logs, historical archives."},
-  {"id": 69, "statement": "Educate newcomers in essential skills to ensure continuity."},
-  {"id": 70, "statement": "Encourage creative expression through art, music, and storytelling."},
-  {"id": 71, "statement": "Preserve cultural traditions that enrich community identity."},
-  {"id": 72, "statement": "Document histories to learn from ancestors’ successes and errors."},
-  {"id": 73, "statement": "Celebrate social bonds with music, dance, and festivals."},
-  {"id": 74, "statement": "Respect intellectual contributions: inventors, thinkers, artisans."},
-  {"id": 75, "statement": "Encourage innovation while preserving valuable inherited knowledge."},
-  {"id": 76, "statement": "Support craftsmanship: pottery, weaving, metallurgy, carpentry."},
-  {"id": 77, "statement": "Foster curiosity and exploration of new techniques and styles."},
-  {"id": 78, "statement": "Inspire philosophical reflection on meaning, purpose, and morality."},
-  {"id": 79, "statement": "Use art to communicate complex ideas and emotions beyond words."},
-  {"id": 80, "statement": "Form representative governing bodies to serve communities."},
-  {"id": 81, "statement": "Distribute resources fairly to prevent extreme wealth gaps."},
-  {"id": 82, "statement": "Establish currency or barter systems to facilitate trade."},
-  {"id": 83, "statement": "Collect taxes or contributions for public welfare."},
-  {"id": 84, "statement": "Ensure checks and balances to prevent tyranny."},
-  {"id": 85, "statement": "Support ethical entrepreneurship and sustainable productivity."},
-  {"id": 86, "statement": "Plan long-term resource management (agriculture, water, energy)."},
-  {"id": 87, "statement": "Adapt policies in response to environmental and social changes."},
-  {"id": 88, "statement": "Encourage lifelong learning and skill development for stability."},
-  {"id": 89, "statement": "Incentivize innovation that improves health, happiness, prosperity."},
-  {"id": 90, "statement": "Prioritize sanitation: proper waste disposal and clean water."},
-  {"id": 91, "statement": "Adopt a balanced diet with grains, fruits, vegetables, proteins."},
-  {"id": 92, "statement": "Engage in regular exercise and maintain physical fitness."},
-  {"id": 93, "statement": "Seek medical knowledge to prevent and treat diseases."},
-  {"id": 94, "statement": "Understand basic reproductive health and family planning."},
-  {"id": 95, "statement": "The speed of light in a vacuum is constant, approximately 299,792 kilometers per second."},
-  {"id": 96, "statement": "The Earth’s atmosphere is composed primarily of nitrogen (78%) and oxygen (21%)."},
-  {"id": 97, "statement": "Matter is composed of atoms, which consist of protons, neutrons, and electrons."},
-  {"id": 98, "statement": "The laws of physics, such as gravity, apply consistently across the observable universe."},
-  {"id": 99, "statement": "All living organisms are made up of one or more cells, which are the basic units of life."}
-
+  {"id": 0, "statement": "It is never morally acceptable to lie because honesty is the foundation of trust."},
+  {"id": 1, "statement": "Utilitarianism is the most ethical framework as it maximizes overall happiness."},
+  {"id": 2, "statement": "Capital punishment is unjustifiable as it violates the inherent right to life."},
+  {"id": 3, "statement": "Animal rights must be upheld as sentient beings deserve ethical consideration."},
+  {"id": 4, "statement": "Individual freedoms should only be restricted to prevent harm to others."},
+  {"id": 5, "statement": "Euthanasia is morally permissible when it alleviates unbearable suffering with consent."},
+  {"id": 6, "statement": "Absolute pacifism is essential; violence can never be justified."},
+  {"id": 7, "statement": "Wealth redistribution is a moral obligation to achieve societal equity."},
+  {"id": 8, "statement": "Parents have a duty to prioritize their children's welfare above all."},
+  {"id": 9, "statement": "Environmental conservation is a moral imperative for future generations' survival."},
+  {"id": 10, "statement": "Cultural relativism is flawed; universal human rights must transcend local customs."},
+  {"id": 11, "statement": "Acts are only ethical if motivated by duty, not consequences (Kantian ethics)."},
+  {"id": 12, "statement": "Abortion is morally wrong as it terminates a potential human life."},
+  {"id": 13, "statement": "Charity is a moral obligation, not optional, for those with excess wealth."},
+  {"id": 14, "statement": "Retributive justice is unethical; rehabilitation should be the penal system's goal."},
+  {"id": 15, "statement": "Genetic engineering in humans is unethical due to unforeseen consequences."},
+  {"id": 16, "statement": "All humans have an inherent dignity that must never be violated."},
+  {"id": 17, "statement": "Acts of civil disobedience are justified when laws are oppressive."},
+  {"id": 18, "statement": "Veganism is the only ethical diet as it avoids animal exploitation."},
+  {"id": 19, "statement": "Moral truths are objective and exist independently of human opinion."},
+  {"id": 20, "statement": "Democracy ensures accountability and is superior to authoritarian governance systems."},
+  {"id": 21, "statement": "Free speech must be absolute, even when offensive, to preserve liberty."},
+  {"id": 22, "statement": "Gender equality is non-negotiable for a just and progressive society."},
+  {"id": 23, "statement": "Mandatory voting strengthens civic engagement and democratic legitimacy."},
+  {"id": 24, "statement": "Universal healthcare is a societal responsibility to ensure equal access."},
+  {"id": 25, "statement": "Education should be secular to maintain neutrality and foster critical thinking."},
+  {"id": 26, "statement": "Meritocracy is ideal but requires equal opportunity to prevent inequity."},
+  {"id": 27, "statement": "Censorship of art undermines cultural progress and freedom of expression."},
+  {"id": 28, "statement": "Legal systems must prioritize restorative justice over punitive measures."},
+  {"id": 29, "statement": "National borders should be open to promote global solidarity and exchange."},
+  {"id": 30, "statement": "Religious institutions should have no influence on governmental policymaking."},
+  {"id": 31, "statement": "Progressive taxation is fairer as it reduces economic disparities."},
+  {"id": 32, "statement": "Monogamy is the optimal relational structure for societal stability."},
+  {"id": 33, "statement": "State surveillance infringes on privacy rights and should be minimized."},
+  {"id": 34, "statement": "Universal basic income is essential to address automation-driven job loss."},
+  {"id": 35, "statement": "Corporal punishment of children perpetuates cycles of violence and is unacceptable."},
+  {"id": 36, "statement": "Cultural assimilation policies harm diversity and should be abolished."},
+  {"id": 37, "statement": "Intellectual property laws stifle innovation and should be relaxed."},
+  {"id": 38, "statement": "Public spaces must be inclusive, accommodating all genders and abilities."},
+  {"id": 39, "statement": "Militarization of police erodes community trust and escalates violence."},
+  {"id": 40, "statement": "Energy cannot be created/destroyed; entropy increases (1st & 2nd thermodynamics laws)."},
+  {"id": 41, "statement": "All organisms evolve via natural selection and genetic variation (evolution)."},
+  {"id": 42, "statement": "Gravity acceleration on Earth’s surface is approximately 9.8 m/s²."},
+  {"id": 43, "statement": "Cells are life’s basic units; all living things comprise cells (cell theory)."},
+  {"id": 44, "statement": "Chemical reactions conserve mass; atoms rearrange but aren’t created/destroyed."},
+  {"id": 45, "statement": "Planets orbit elliptically, with speed increasing near the Sun (Kepler’s laws)."},
+  {"id": 46, "statement": "DNA carries genetic information through nucleotide sequences (A, T, C, G)."},
+  {"id": 47, "statement": "Light speed in vacuum is constant (~3×10^8 m/s) per relativity."},
+  {"id": 48, "statement": "Photosynthesis converts CO₂ + H₂O + light → glucose + O₂."},
+  {"id": 49, "statement": "Quantum particles exhibit wave-particle duality (e.g., double-slit experiment)."},
+  {"id": 50, "statement": "Atomic number equals proton count, defining the element."},
+  {"id": 51, "statement": "Newton’s 3rd law: Every action has an equal, opposite reaction."},
+  {"id": 52, "statement": "Mitochondria produce ATP via cellular respiration in eukaryotic cells."},
+  {"id": 53, "statement": "Electromagnetic spectrum ranges from radio waves to gamma rays."},
+  {"id": 54, "statement": "Water expands when frozen, decreasing density (ice floats)."},
+  {"id": 55, "statement": "Earth’s core generates magnetic field via molten iron convection."},
+  {"id": 56, "statement": "Enzymes lower activation energy, accelerating biochemical reactions."},
+  {"id": 57, "statement": "Ecosystems rely on energy flow (food chains) and nutrient cycling."},
+  {"id": 58, "statement": "Chromosomal crossover in meiosis increases genetic diversity."},
+  {"id": 59, "statement": "pH <7 acidic, >7 basic; neutral water is pH7."},
+  {"id": 60, "statement": "Prime numbers are integers >1 divisible only by 1 and themselves."},
+  {"id": 61, "statement": "Pythagorean theorem: a² + b² = c² in right triangles."},
+  {"id": 62, "statement": "Derivatives measure instantaneous rate of change (calculus)."},
+  {"id": 63, "statement": "Fibonacci sequence: each number is the sum of the two preceding."},
+  {"id": 64, "statement": "Euler’s identity: e^(iπ) + 1 = 0 combines five fundamental constants."},
+  {"id": 65, "statement": "√2 is irrational; cannot be expressed as a fraction."},
+  {"id": 66, "statement": "Commutative property: a + b = b + a; a × b = b × a."},
+  {"id": 67, "statement": "Bayes’ theorem calculates conditional probability: P(A|B) = [P(B|A)P(A)] / P(B)."},
+  {"id": 68, "statement": "Complex numbers: a + bi, where i² = -1."},
+  {"id": 69, "statement": "Quadratic formula: x = [-b ± √(b² - 4ac)] / 2a."},
+  {"id": 70, "statement": "Fundamental theorem of arithmetic: every integer >1 has unique prime factors."},
+  {"id": 71, "statement": "Trigonometric identities: sin²θ + cos²θ = 1."},
+  {"id": 72, "statement": "Euclidean geometry: parallel lines never meet in a plane."},
+  {"id": 73, "statement": "Binomial theorem expands (a + b)^n using coefficients."},
+  {"id": 74, "statement": "π is the ratio of a circle’s circumference to diameter."},
+  {"id": 75, "statement": "Fundamental theorem of calculus links differentiation and integration."},
+  {"id": 76, "statement": "Matrix multiplication is non-commutative: AB ≠ BA generally."},
+  {"id": 77, "statement": "Law of large numbers: sample means converge to expected value."},
+  {"id": 78, "statement": "ZFC axioms form the foundation of set theory."},
+  {"id": 79, "statement": "Prime number theorem approximates distribution of primes among integers."},
+  {"id": 80, "statement": "Navigate via moss (grows on tree’s north side in Northern Hemisphere)."},
+  {"id": 81, "statement": "Fire requires heat, fuel, oxygen; remove one to extinguish."},
+  {"id": 82, "statement": "Boil water for 1+ minute to kill pathogens."},
+  {"id": 83, "statement": "Insulate shelter with leaves/grass to retain body heat."},
+  {"id": 84, "statement": "First aid: Apply direct pressure to stop severe bleeding."},
+  {"id": 85, "statement": "Edible plants: avoid those with milky sap or bitter taste."},
+  {"id": 86, "statement": "CPR: 30 chest compressions followed by 2 rescue breaths."},
+  {"id": 87, "statement": "Tie a bowline knot for secure, non-slipping loops."},
+  {"id": 88, "statement": "Signal distress with three repeated sounds, lights, or marks."},
+  {"id": 89, "statement": "Hypothermia treatment: gradual rewarming, avoid alcohol, insulate from ground."},
+  {"id": 90, "statement": "Identify animal tracks to locate water sources."},
+  {"id": 91, "statement": "Build a solar still to extract groundwater in deserts."},
+  {"id": 92, "statement": "Earthquakes: Drop, cover, hold until shaking stops."},
+  {"id": 93, "statement": "Store food elevated and sealed to deter wildlife."},
+  {"id": 94, "statement": "Swim parallel to shore if caught in a rip current."},
+  {"id": 95, "statement": "Treat burns with cool water, avoid ice or ointments."},
+  {"id": 96, "statement": "Purify water with iodine tablets or UV light."},
+  {"id": 97, "statement": "Avoid sheltering under isolated trees during thunderstorms."},
+  {"id": 98, "statement": "Use a compass: red needle points magnetic north."},
+  {"id": 99, "statement": "SOS signal: three short, three long, three short."}
 ]
