chore: upload results

--- a/.gitattributes
+++ b/.gitattributes
@@ -58,3 +58,4 @@ b41fd1b7bdad96e440d15a97d640827e-concepts.json filter=lfs diff=lfs merge=lfs -te
 **/*-concepts*.json filter=lfs diff=lfs merge=lfs -text
 data-analysis/data/**/*.json filter=lfs diff=lfs merge=lfs -text
 data-analysis/data/**/*.csv filter=lfs diff=lfs merge=lfs -text
+sorted_edges.json filter=lfs diff=lfs merge=lfs -text
